[tool.poetry]
name = "drf_practice"
version = "0.1.0"
description = ""
authors = ["root-kjh <wldnro3141@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.7"
django-extensions = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
